--- a/theme.liquid
+++ b/theme.liquid
@@ -72,7 +72,7 @@
       {{ 'decimals-overdrive.js' | asset_url | script_tag }}
 
     {%- else -%}
-
+      <div>:(</div>
     {%- endif -%}
 
   </body>
